--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-native": "~0.60.23",
     "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
+    "prettier": "^1.19.1",
     "typescript": "~3.6.3"
   },
   "private": true
